[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zapi"
version = "0.1.0"
description = "Zero-Config API Intelligence - automatically discover, understand, and prepare APIs for LLM and agent workflows"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "ZAPI Contributors"}
]
keywords = ["api", "llm", "automation", "browser", "network", "har"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "playwright>=1.40.0",
    "cryptography>=41.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "langchain>=1.0.0",
    "langchain-anthropic>=1.0.0",
    "langchain-openai>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/adoptai/zapi"
Repository = "https://github.com/adoptai/zapi"

[tool.setuptools.packages.find]
where = ["."]
include = ["zapi*"]

